force-app/main/default/objects/Registration_Template__c.object
<CustomObject>
    <fields>
        <fullName>Is_Degree_And_Year_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Degree And Year Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Employer_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Employer Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Guest_Email_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Guest Email Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Not_Refundable_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Not Refundable Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Phone_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Phone Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Preferred_Mailing_Address_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Preferred Mailing Address Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Request_For_More_Information_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Request For More Information Needed</label>
        <type>Checkbox</type>
    </fields>
    <label>Registration Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Registration Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration Templates</pluralLabel>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>Registration Templates used for events</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volunteer</fullName>
        <active>true</active>
        <description>Registration Templates used for volunteers</description>
        <label>Volunteer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>